# ur5-mntfields

./: .gitignore  IMPLEMENTATION_TRACKER.md  README.md
curobo_configs/: README.md  generate_ur5_wrist_camera_urdf.sh  ur5_wrist_camera.urdf  ur5_wrist_camera.yml
src/ur_mntfields_arm/: BUDGETED_FIELD_ANCHORS.md  README.md  package.xml  setup.cfg  setup.py
src/ur_mntfields_arm/config/: arm_explorer.yaml
src/ur_mntfields_arm/launch/: ur_mntfields_arm.launch.py
src/ur_mntfields_arm/resource/: ur_mntfields_arm
src/ur_mntfields_arm/test/: test_anchor_routing.py  test_budgeted_anchor_planner.py  test_collision_checker.py  test_cspace_sampling.py  test_false_free_audit.py  test_frontier_bank.py  test_learned_speed_search.py  test_offline_planner_benchmark.py  test_online_state_field.py  test_replay_sampling.py  test_roi_targeting.py  test_training_stability.py
src/ur_mntfields_arm/ur_mntfields_arm/: __init__.py  arm_field_model.py  budgeted_anchor_planner.py  check_sphere_motion.py  collision_checker.py  cspace_sampling.py  exploration_manager.py  frontier_bank.py  goal_selector.py  inspect_training_dump.py  joint_teleop.py  offline_planner_benchmark.py  offline_replay_train.py  online_training.py  planner.py  roi_targeting.py  sphere_urdf_overlay.py  test_trained_field.py  ur5_kinematics.py  view_arm_samples_3d.py  view_field_speed_3d.py  view_field_trajectories_3d.py  view_goal_candidate_sweep_3d.py  view_offline_planner_benchmark_3d.py  view_planner_score_sweep_3d.py  visualize_field_slices.py  voxel_map.py
src/ur_mntfields_arm/ur_mntfields_arm/tb_core/: __init__.py  model_base.py  model_function_metric.py  model_network_metric.py
src/ur_mntfields_arm_sim/: README.md  package.xml  setup.cfg  setup.py
src/ur_mntfields_arm_sim/config/: gz_controllers.yaml  initial_positions.yaml  real_scene.yaml  real_scene_boxes.yaml  sim_scene.yaml  startup_poses.yaml
src/ur_mntfields_arm_sim/config/ur5/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
src/ur_mntfields_arm_sim/launch/: ur5_box_teleop_gz.launch.py  ur_mntfields_arm_field_test_gz.launch.py  ur_mntfields_arm_gz.launch.py  ur_mntfields_arm_real.launch.py  ur_mntfields_arm_sim.launch.py  ur_mntfields_rgbd_curobo_gz.launch.py  ur_mntfields_rgbd_gz.launch.py
src/ur_mntfields_arm_sim/resource/: ur_mntfields_arm_sim
src/ur_mntfields_arm_sim/rviz/: rviz_ur5_sim.rviz
src/ur_mntfields_arm_sim/scripts/: run_offline_planner_comparison.sh  run_planner_baseline.sh
src/ur_mntfields_arm_sim/ur_mntfields_arm_sim/: __init__.py  cabinet_marker_publisher.py  scene_boxes_publisher.py  synthetic_depth_camera.py  trajectory_executor.py
src/ur_mntfields_arm_sim/urdf/: ur_with_wrist_camera.urdf.xacro
src/ur_mntfields_arm_sim/worlds/: ur5_cabinet_world.sdf
src/ur_mntfields_rgbd/: README.md  package.xml  setup.cfg  setup.py
src/ur_mntfields_rgbd/config/: online_curobo.yaml  sampler.yaml
src/ur_mntfields_rgbd/launch/: mntfields_rgbd_sampler.launch.py
src/ur_mntfields_rgbd/resource/: ur_mntfields_rgbd
src/ur_mntfields_rgbd/ur_mntfields_rgbd/: offline_field_path.py  offline_field_train.py  online_field_curobo.py  rgbd_mntfields_sampler.py  sampling.py  view_field_path_3d.py  view_samples_3d.py
